--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/transaction-history/transaction-history-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/transaction-history/transaction-history-dialog.component.html
@@ -4,7 +4,14 @@
 <div mat-dialog-content>
   <mat-card>
     <mat-card-content>
-      <table mat-table multiTemplateDataRows class="mat-elevation-z8" [dataSource]="dataSource" matSort>
+      <table
+        *ngIf="dataSource.length !== 0"
+        mat-table
+        multiTemplateDataRows
+        class="mat-elevation-z8"
+        [dataSource]="dataSource"
+        matSort
+      >
         <ng-container matColumnDef="cardNumber">
           <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Thẻ</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction; let i = dataIndex">
@@ -13,7 +20,11 @@
         </ng-container>
         <ng-container matColumnDef="type">
           <th mat-header-cell *matHeaderCellDef>Dịch vụ</th>
-          <td mat-cell *matCellDef="let transaction">{{ transaction.type }}</td>
+          <td mat-cell *matCellDef="let transaction">
+            <button mat-raised-button color="primary">
+              {{ displayTransactionType(transaction.type) }}
+            </button>
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="amount">
@@ -62,7 +73,7 @@
           (click)="expandedElement = expandedElement === element ? null : element"
         ></tr>
       </table>
-
+      <h3 style="color: red; text-align: center" *ngIf="dataSource.length === 0">Chưa có giao dịch!</h3>
     </mat-card-content>
   </mat-card>
 </div>
