--- a/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
+++ b/src/app/transactions/dialog/add-fee-dialog/add-fee-dialog.component.html
@@ -1,5 +1,6 @@
 <h1 mat-dialog-title>Thêm thu/chi tiền cho giao dịch [{{txnCode}}]</h1>
 <div mat-dialog-content>
+  <span style="color: #e74c3c;">{{messageNoti}}</span>
   <div class="custom-files-input" fxLayout="column">
     <div fxLayout="column"
          *ngIf="transactionPaid"
@@ -32,7 +33,7 @@
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="30%">
-          <mat-label>Số tiền</mat-label>
+          <mat-label>Số tiền ({{paidAmount | money}})</mat-label>
           <input
             matInput
             required
@@ -82,7 +83,7 @@
         </mat-form-field>
 
         <mat-form-field *ngIf="formDialogGet.contains('amountGet')" fxFlex="30%">
-          <mat-label>Số tiền</mat-label>
+          <mat-label>Số tiền ({{feeAmount|money}})</mat-label>
           <input
             required
             currencyMask
