add fee on per booking
add fee on per booking

--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.scss
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.scss
@@ -13,6 +13,12 @@
     min-width: auto !important;
     width: 100% !important;
 }
+td.mat-cell {
+
+  border-bottom: 1px solid black;
+  border-top: 1px solid black;
+ }
+
 
 .mat-header-row {
     width: 100%;
