--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
@@ -17,12 +17,12 @@
         <span matPrefix>Đã thu hồi:&nbsp;</span>
       </mat-form-field>
       <mat-form-field fxFlex="10%">
-        <input matInput disabled [(value)]="transactionInfo.feePercentage" />
+        <input matInput disabled [value]="transactionInfo?.feePercentage" />
         <span matPrefix> - Phí:&nbsp;</span>
         <span matSuffix>%</span>
       </mat-form-field>
       <mat-form-field fxFlex="20%">
-        <input matInput disabled [value]="transactionInfo.feeAmount | money" />
+        <input matInput disabled [value]="transactionInfo?.feeAmount | money" />
         <span matPrefix> - Tiền phí cần thu:&nbsp;</span>
       </mat-form-field>
     </div>
@@ -51,12 +51,7 @@
 
         <ng-container matColumnDef="fee">
           <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Phí thực tế</th>
-          <td mat-cell fxHide fxShow.gt-md *matCellDef="let booking">{{ transactionInfo.feePercentage }}%</td>
-        </ng-container>
-
-        <ng-container matColumnDef="paidAmount">
-          <th mat-header-cell *matHeaderCellDef>Đã chi</th>
-          <td mat-cell *matCellDef="let booking">{{ booking.totalPaid | money }}</td>
+          <td mat-cell fxHide fxShow.gt-md *matCellDef="let booking">{{ transactionInfo?.feePercentage }}%</td>
         </ng-container>
 
         <ng-container matColumnDef="getAmount">
