--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,9 +32,10 @@
 
     <!-- Language Selector to the extreme right -->
     <div fxLayout="row-reverse" fxFlex="1 0 auto">
-      <mifosx-language-selector class="p-r-10 p-t-10"></mifosx-language-selector>
-      <div fxFlex></div>
-      <mifosx-server-selector class="p-l-10 p-t-10" *ngIf="environment.allowServerSwitch"></mifosx-server-selector>
+      <mifosx-language-selector class="p-r-10 p-l-10 p-t-10"></mifosx-language-selector>
+      <!-- <div fxFlex></div> -->
+      <midas-server-selector class="p-l-10 p-t-10" *ngIf="environment.allowServerSwitch"></midas-server-selector>
+      <midas-billpos-selector class="p-l-10 p-t-10" *ngIf="environment.allowServerSwitch"></midas-billpos-selector>
     </div>
 
     <!-- Logo with Organization Name -->
