--- a/src/app/shared/server-selector/server-selector.component.html
+++ b/src/app/shared/server-selector/server-selector.component.html
@@ -1,5 +1,5 @@
 <mat-form-field id="server-selector">
-  <mat-label>Server</mat-label>
+  <mat-label>Core Server</mat-label>
   <mat-select [formControl]="serverSelector">
     <mat-option *ngFor="let server of servers" [value]="server">
       {{ server }}
