add fee transaction after create
add fee transaction after create

--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -171,10 +171,10 @@
               <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary">
                 <fa-icon icon="download"></fa-icon>&nbsp;&nbsp; Tải hóa đơn
               </button>
-              <!-- <button (click)="this.uploadPic()" mat-raised-button color="primary" >
+              <button (click)="this.addFeeDialog(transactionInfo.transactionRefNo)" mat-raised-button color="primary" >
               <fa-icon icon="check"></fa-icon>&nbsp;&nbsp;
-              Hoàn tất giao dịch
-            </button> -->
+                Thực hiện thu/chi
+              </button>
             </div>
           </div>
         </div>
