--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.html
@@ -43,15 +43,17 @@
   <mat-card-content>
     <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
 
-      <mat-form-field fxFlex="30%" *ngIf="formFilter.contains('chose')" class="input_custom">
+      <mat-form-field fxFlex="30%" *ngIf="formFilter.contains('member')" class="input_custom">
         <mat-label>Khách hàng</mat-label>
-        <mat-select required formControlName="chose">
-          <mat-option *ngFor="let type of options"
-                      [fxHide]="type.code === 'DE'"
-                      [value]="type.code">
-            {{ type.desc }}
+        <mat-select required formControlName="member">
+          <mat-option *ngFor="let type of members"
+                      [value]="type">
+            {{ type.cardNumber.slice(0,6) }}&nbsp;X&nbsp;{{ type.cardNumber.slice(-4,-1) }}&nbsp; - &nbsp;{{type.fullName}}
           </mat-option>
         </mat-select>
+        <mat-error *ngIf="formFilter.controls.member.hasError('required')">
+        Vui lòng chọn khách hàng
+        </mat-error>
       </mat-form-field>
       <div fxFlex="10%">
         <button mat-button type="button"
@@ -69,8 +71,8 @@
         </button>
       </div>
     </div>
-    <table mat-table class="mat-elevation-z8" multiTemplateDataRows (matSortChange)="sortData($event)"
-           [dataSource]="accountsShow" matSort>
+    <table mat-table class="mat-elevation-z8" multiTemplateDataRows
+           [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="clientName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên khách hàng</th>
@@ -229,7 +231,7 @@
       <!--[routerLink]="['transactions/view', row.transactionId]"-->
     </table>
   </mat-card-content>
-  <mat-paginator paginator [length]="accountFilter.length" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
+  <mat-paginator paginator [length]="dataSource?.length" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
                  showFirstLastButtons></mat-paginator>
   <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false" style="width: 50px;">
     <ng-template matMenuContent
