--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
@@ -59,3 +59,20 @@ tr.example-element-row:not(.example-expanded-row):active {
   font-weight: bold;
   margin: 6px;
 }
+
+.select-custom {
+  width: 70px;
+}
+
+.input-custom {
+  width: 70px;
+}
+
+.money-cell {
+  text-align: right;
+}
+
+.actions {
+  width: 30px;
+}
+
