add page limit pos, ganecy booking, create success transaction dialog, saving off user
add page limit pos, ganecy booking, create success transaction dialog, saving off user

--- a/src/app/core/shell/breadcrumb/breadcrumb.component.html
+++ b/src/app/core/shell/breadcrumb/breadcrumb.component.html
@@ -7,7 +7,7 @@
           <a *ngIf="breadcrumb.url"
           [routerLink]="breadcrumb.url"
           >{{ breadcrumb.label  | translate }}</a>
-          <a *ngIf="breadcrumb.url">{{ breadcrumb.label  | translate }}</a>
+          <!-- <a *ngIf="breadcrumb.url">{{ breadcrumb.label  | translate }}</a> -->
           <span *ngIf="!breadcrumb.url">{{ breadcrumb.label  | translate }}</span>
         </span>
         <span *ngIf="last">{{ breadcrumb.label  | translate }}</span>
