--- a/src/app/transactions/view-transaction/view-transaction.component.html
+++ b/src/app/transactions/view-transaction/view-transaction.component.html
@@ -117,6 +117,12 @@
               {{ transactionInfo.officeName | uppercase }}
             </div>
           </div>
+          <div fxFlex="100%" fxLayout="row wrap" class="content">
+            <div fxFlex="30%">Người tạo</div>
+            <div fxFlex="60%" style="color: blue; font-weight: bold" class="left">
+              {{ transactionInfo.staffName | uppercase }}
+            </div>
+          </div>
           <div fxFlex="100%" fxLayout="row wrap">
             <div fxFlex="100%" fxLayout="row wrap" class="content">
               <div fxFlex="100%" style="color: green; font-weight: bold">Thông tin về thu chi giao dịch</div>
