--- a/src/app/home/mainboard/mainboard.component.html
+++ b/src/app/home/mainboard/mainboard.component.html
@@ -1,17 +1,17 @@
 <mat-card>
   <mat-label>Thực hiện giao dịch</mat-label>
 
-  <form class="example-container " >
+  <div class="example-container " >
     <mat-form-field style="width: 100%; "  >
       <mat-label>Tìm kiếm khách hàng, đại lý thực hiện giao dịch</mat-label>
       <input    type="email" matInput #querySearchAll (change)=" this.searchClientAndGroup(querySearchAll.value);"
              placeholder="Tìm kiếm theo tên, số CMND/CCCD ,số thẻ, số điện thoại">
 
     </mat-form-field>
-  </form>
+  </div>
   <div class="example-container " >
 
-    <mat-table  [dataSource]="dataSource" matSort>
+    <mat-table   [dataSource]="dataSource" matSort>
       <!-- ID Column -->
       <ng-container matColumnDef="id">
         <mat-header-cell  *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
@@ -67,7 +67,7 @@
       </ng-container>
 
       <mat-header-row  *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row  *matRowDef="let row; let even = even ; columns: displayedColumns;"
+      <mat-row mat-dialog-close *matRowDef="let row; let even = even ; columns: displayedColumns;"
       class="select-row"
       [ngClass]="{green: even}"
       [routerLink]="['/clients', row.id, 'identities']"
@@ -82,7 +82,7 @@
     mode="indeterminate">
   </mat-progress-spinner>
 </div>
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <mat-paginator   [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 
 </mat-card>
