--- a/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
+++ b/src/app/transactions/dialog/create-success-transaction-dialog/create-success-transaction-dialog.component.html
@@ -5,7 +5,7 @@
     <button (click)="this.downloadVoucherTransaction()" mat-raised-button color="primary">
       <fa-icon icon="download"></fa-icon>&nbsp;&nbsp; Tải hóa đơn
     </button>
-    <button (click)="this.addFeeDialog(transactionInfo.transactionRefNo)" mat-raised-button color="warn">
+    <button (click)="this.addFeeDialog()" mat-raised-button color="warn">
       <fa-icon icon="check"></fa-icon>&nbsp;&nbsp; Thực hiện thu/chi
     </button>
   </mat-dialog-actions>
