process: check valid form + confirm

--- a/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
+++ b/src/app/transactions/batch-transactions/create-batch-transaction/create-batch-transaction.component.scss
@@ -65,14 +65,24 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 .input-custom {
-  width: 70px;
+  width: 80%;
+  padding-right: 8px;
+  padding-left: 8px;
+  max-width: 150px;
 }
 
 .money-cell {
-  text-align: right;
+  text-align: center;
 }
 
 .actions {
   width: 30px;
 }
 
+.export-item {
+  margin-top: 10px;
+}
+
+.no-input {
+  max-width: 70px;
+}
