--- a/src/app/transactions/dialog/create-card-batch-transaction/create-card-batch-transaction.component.html
+++ b/src/app/transactions/dialog/create-card-batch-transaction/create-card-batch-transaction.component.html
@@ -10,8 +10,8 @@
       <mat-label>Chọn khách hàng</mat-label>
       <mat-select required formControlName="memberAddIdentifier">
         <mat-option *ngFor="let type of clients"
-                    [value]="type.value">
-          {{type.label}}
+                    [value]="type.clientId">
+          {{type.fullName}}
         </mat-option>
       </mat-select>
     </mat-form-field>
@@ -19,9 +19,9 @@
     <mat-form-field fxFlex="30%" *ngIf="formDialog.contains('documentClientIdentifierType')" class="input_custom">
       <mat-label>Chọn thông tin cần thêm</mat-label>
       <mat-select required formControlName="documentClientIdentifierType">
-        <mat-option *ngFor="let type of clients"
-                    [value]="type.value">
-          {{type.label}}
+        <mat-option *ngFor="let type of documents"
+                    [value]="type.id">
+          {{type.name}}
         </mat-option>
       </mat-select>
     </mat-form-field>
@@ -57,7 +57,7 @@
     <mat-form-field fxFlex="30%" *ngIf="formDialog.contains('documentCardBankClientIdentifierKey')"
                     class="input_custom">
       <mat-label>Chọn ngân hàng</mat-label>
-      <mat-select required formControlName="documentCardBankClientIdentifierKey">
+      <mat-select disabled formControlName="documentCardBankClientIdentifierKey">
         <mat-option *ngFor="let type of banks"
                     [value]="type.bankCode">
           {{type.bankName}}
@@ -68,7 +68,7 @@
     <mat-form-field fxFlex="30%" *ngIf="formDialog.contains('documentCardTypeClientIdentifierKey')"
                     class="input_custom">
       <mat-label>Chọn ngân hàng</mat-label>
-      <mat-select required formControlName="documentCardTypeClientIdentifierKey">
+      <mat-select  disabled formControlName="documentCardTypeClientIdentifierKey">
         <mat-option *ngFor="let type of typeCards"
                     [value]="type.code">
           {{type.description}}
